Reject btn styles

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
         <!-- COOKIES BLOCK -->
         <footer id="cookies-bar">
             <p data-i18n="cookies">
-                🍪🐱 <strong>sandokan.cat</strong> respect your privacy. <em>We do not track</em>, only measure anonymous visits — (if you agree). <button id="accept-cookies" class="icons-scale" aria-label="Continue browsing" type="button">Accept</button> <button id="reject-cookies" class="icons-scale" aria-label="I don't care about cookies" type="button">Reject</button> | <a id="info-cookies" href="https://en.wikipedia.org/wiki/HTTP_cookie" target="_blank" rel="noopener noreferrer" aria-label="More information">What is a <span lang="en-GB">cookie</span>?</a>
+                🍪🐱 <strong>sandokan.cat</strong> respect your privacy. <em>We do not track</em>, only measure anonymous visits — (if you agree). <button id="accept-cookies" class="icons-scale" aria-label="Continue browsing" type="button">Accept</button> <button id="reject-cookies" aria-label="I don't care about cookies" type="button">Reject</button> | <a id="info-cookies" href="https://en.wikipedia.org/wiki/HTTP_cookie" target="_blank" rel="noopener noreferrer" aria-label="More information">What is a <span lang="en-GB">cookie</span>?</a>
             </p>
         </footer>
         <!--//COOKIES END -->
