--- a/private/fallbacks/light/index.ca-ES.html
+++ b/private/fallbacks/light/index.ca-ES.html
@@ -527,7 +527,7 @@
         <!-- COOKIES BLOCK -->
         <footer id="cookies-bar">
             <p data-i18n="cookies">
-                🍪🐱 <strong>sandokan.cat</strong> respecta la teva privacitat. <em>No rastregem</em>, només mesurem visites anònimes — (si acceptes). <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegant">Acceptar</button> <button id="reject-cookies" class="icons-scale" aria-label="No m'importen les cookies" type="button">Rebutjar</button> | <a id="info-cookies" href="https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)" target="_blank" rel="noopener noreferrer" aria-label="Més informació">Què és una <span lang="en-GB">cookie</span>?</a>
+                🍪🐱 <strong>sandokan.cat</strong> respecta la teva privacitat. <em>No rastregem</em>, només mesurem visites anònimes — (si acceptes). <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegant">Acceptar</button> <button id="reject-cookies" aria-label="No m'importen les cookies" type="button">Rebutjar</button> | <a id="info-cookies" href="https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)" target="_blank" rel="noopener noreferrer" aria-label="Més informació">Què és una <span lang="en-GB">cookie</span>?</a>
             </p>
         </footer>
         <!--//COOKIES END -->
