--- a/private/fallbacks/dark/index.en-GB.html
+++ b/private/fallbacks/dark/index.en-GB.html
@@ -206,14 +206,14 @@
                         <li>
                             <a aria-label="Spanish" href="private/fallbacks/dark/index.es-ES.html">
                                 <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                    <use href="img/sprite.svg#es-ES"></use>
+                                    <use href="img/sprite.svg#es-ES" xlink:href="img/sprite.svg#es-ES"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a aria-label="Catalan" href="private/fallbacks/dark/index.ca-ES.html">
                                 <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                    <use href="img/sprite.svg#ca-ES"></use>
+                                    <use href="img/sprite.svg#ca-ES" xlink:href="img/sprite.svg#ca-ES"></use>
                                 </svg>
                             </a>
                         </li>
@@ -229,21 +229,21 @@
                     <li>
                         <button data-i18n-attr="aria-label:langBtnCa" data-lang="ca-ES" class="icons-scale" id="lang-toggle" aria-label="Catalan" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#ca-ES"></use>
+                                <use href="img/sprite.svg#ca-ES" xlink:href="img/sprite.svg#ca-ES"></use>
                             </svg>
                         </button>
                     </li>
                     <li>
                         <button data-i18n-attr="aria-label:langBtnEs" data-lang="es-ES" class="icons-scale" aria-label="Spanish" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#es-ES"></use>
+                                <use href="img/sprite.svg#es-ES" xlink:href="img/sprite.svg#es-ES"></use>
                             </svg>
                         </button>
                     </li>
                     <li>
                         <button data-i18n-attr="aria-label:langBtnEn" class="icons-scale" data-lang="en-GB" aria-label="English" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#en-GB"></use>
+                                <use href="img/sprite.svg#en-GB" xlink:href="img/sprite.svg#en-GB"></use>
                             </svg>
                         </button>
                     </li>
