refactoring for compatibility

--- a/index.html
+++ b/index.html
@@ -279,17 +279,17 @@
                     <ul id="languages">
                         <li data-i18n="catalan">Catalan
                             <svg class="icons-color-1" role="img" aria-label="Native level" aria-hidden="false" width="124" height="18" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#native-lang"></use>
+                                <use href="img/sprite.svg#native-lang" xlink:href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
                         <li data-i18n="spanish">Spanish
                             <svg class="icons-color-1" role="img" aria-label="Native level" aria-hidden="false" width="124" height="18" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#native-lang"></use>
+                                <use href="img/sprite.svg#native-lang" xlink:href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
                         <li data-i18n="english">English
                             <svg class="icons-color-1" role="img" aria-label="Intermediate level" aria-hidden="false" width="124" height="18" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#medium-lang"></use>
+                                <use href="img/sprite.svg#native-lang" xlink:href="img/sprite.svg#medium-lang"></use>
                             </svg>
                         </li>
                     </ul>
@@ -302,7 +302,7 @@
                                 <a data-i18n-attr="aria-label:mail" href="mailto:dev@sandokan.cat" aria-label="Send an E-mail"><strong>dev@sandokan.cat</strong></a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="25" height="25" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#email"></use>
+                                <use href="img/sprite.svg#email" xlink:href="img/sprite.svg#email"></use>
                             </svg>
                         </li>
                         <li>
@@ -310,7 +310,7 @@
                                 <a data-i18n-attr="aria-label:mobile" href="tel:+34631306583" aria-label="Send a WhatsApp or call">+34 631306583</a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#whatsapp"></use>
+                                <use href="img/sprite.svg#whatsapp" xlink:href="img/sprite.svg#whatsapp"></use>
                             </svg>
                         </li>
                         <li>
@@ -318,13 +318,13 @@
                                 <a data-i18n-attr="aria-label:linkedin" href="https://linkedin.com/in/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Visit Linkedin profile">https://linkedin.com/in/sandokanCat</a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#linkedin"></use>
+                                <use href="img/sprite.svg#linkedin" xlink:href="img/sprite.svg#linkedin"></use>
                             </svg>
                         </li>
                         <li>
                             <address>08014 <span lang="ca-ES">Barcelona</span></address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#address"></use>
+                                <use href="img/sprite.svg#address" xlink:href="img/sprite.svg#address"></use>
                             </svg>
                         </li>
                     </ol>
@@ -394,12 +394,12 @@
                             <aside data-i18n-attr="aria-label:carouselCtrl" class="carousel-control" aria-label="Carousel controls">
                                 <button data-i18n-attr="aria-label:carouselBack" class="carousel-back" aria-label="Back" type="button">
                                     <svg class="icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                        <use href="img/sprite.svg#arrow-left"></use>
+                                        <use href="img/sprite.svg#arrow-left" xlink:href="img/sprite.svg#arrow-left"></use>
                                     </svg>
                                 </button>
                                 <button data-i18n-attr="aria-label:carouselAdvance" class="carousel-advance" aria-label="Advance" type="button">
                                     <svg class="icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                        <use href="img/sprite.svg#arrow-right"></use>
+                                        <use href="img/sprite.svg#arrow-right" xlink:href="img/sprite.svg#arrow-right"></use>
                                     </svg>
                                 </button>
                             </aside>
@@ -448,7 +448,7 @@
                         <h4 data-i18n="otherData">Other data</h4>
                         <a data-i18n-attr="aria-label:downloadCV" class="other-links" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Download CV pdf">
                             <svg class="icons-color-2 icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#pdf"></use>
+                                <use href="img/sprite.svg#pdf" xlink:href="img/sprite.svg#pdf"></use>
                             </svg>
                         </a>
                     </div>
@@ -470,14 +470,14 @@
                                     <li>
                                         <a href="https://github.com/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Github">
                                             <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="28" height="28" preserveAspectRatio="xMinYMin meet">
-                                                <use href="img/sprite.svg#github"></use>
+                                                <use href="img/sprite.svg#github" xlink:href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Vercel">
                                             <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                                <use href="img/sprite.svg#vercel"></use>
+                                                <use href="img/sprite.svg#vercel" xlink:href="img/sprite.svg#vercel"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -498,14 +498,14 @@
                                 <li id="github-icon">
                                     <a href="https://github.com/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Github">
                                         <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                            <use href="img/sprite.svg#github"></use>
+                                            <use href="img/sprite.svg#github" xlink:href="img/sprite.svg#github"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li id="vercel-icon">
                                     <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Vercel">
                                         <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                            <use href="img/sprite.svg#vercel"></use>
+                                            <use href="img/sprite.svg#vercel" xlink:href="img/sprite.svg#vercel"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -548,7 +548,7 @@
             <div id="modal-img-wrapper"></div>
             <button data-i18n-attr="aria-label:modalClose" id="modal-close" class="icons-color-1" aria-label="Close" type="button">
                 <svg class="icons-scale" aria-hidden="true" width="50" height="50" preserveAspectRatio="xMinYMin meet">
-                    <use href="img/sprite.svg#close"></use>
+                    <use href="img/sprite.svg#close" xlink:href="img/sprite.svg#close"></use>
                 </svg>
             </button>
         </div>
