--- a/private/fallbacks/dark/index.ca-ES.html
+++ b/private/fallbacks/dark/index.ca-ES.html
@@ -272,17 +272,17 @@
                     <ul id="languages">
                         <li data-i18n="catalan">Català
                             <svg class="icons-color-1" role="img" aria-label="Nivell nadiu" aria-hidden="false" width="124" height="18" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#native-lang"></use>
+                                <use href="img/sprite.svg#native-lang" xlink:href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
                         <li data-i18n="spanish">Espanyol
                             <svg class="icons-color-1" role="img" aria-label="Nivell nadiu" aria-hidden="false" width="124" height="18" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#native-lang"></use>
+                                <use href="img/sprite.svg#native-lang" xlink:href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
                         <li data-i18n="english">Anglès
                             <svg class="icons-color-1" role="img" aria-label="Nivell mitjà" aria-hidden="false" width="124" height="18" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#medium-lang"></use>
+                                <use href="img/sprite.svg#native-lang" xlink:href="img/sprite.svg#medium-lang"></use>
                             </svg>
                         </li>
                     </ul>
@@ -295,7 +295,7 @@
                                 <a data-i18n-attr="aria-label:mail" href="mailto:dev@sandokan.cat" aria-label="Enviar E-mail"><strong>dev@sandokan.cat</strong></a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="25" height="25" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#email"></use>
+                                <use href="img/sprite.svg#email" xlink:href="img/sprite.svg#email"></use>
                             </svg>
                         </li>
                         <li>
@@ -303,7 +303,7 @@
                                 <a data-i18n-attr="aria-label:mobile" href="tel:+34631306583" aria-label="Enviar WhatsApp o trucar">+34 631306583</a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#whatsapp"></use>
+                                <use href="img/sprite.svg#whatsapp" xlink:href="img/sprite.svg#whatsapp"></use>
                             </svg>
                         </li>
                         <li>
@@ -311,13 +311,13 @@
                                 <a data-i18n-attr="aria-label:linkedin" href="https://linkedin.com/in/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Visitar perfil de Linkedin">https://linkedin.com/in/sandokanCat</a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#linkedin"></use>
+                                <use href="img/sprite.svg#linkedin" xlink:href="img/sprite.svg#linkedin"></use>
                             </svg>
                         </li>
                         <li>
                             <address>08014 <span lang="ca-ES">Barcelona</span></address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#address"></use>
+                                <use href="img/sprite.svg#address" xlink:href="img/sprite.svg#address"></use>
                             </svg>
                         </li>
                     </ol>
@@ -387,12 +387,12 @@
                             <aside data-i18n-attr="aria-label:carouselCtrl" class="carousel-control" aria-label="Controls del carrusel">
                                 <button data-i18n-attr="aria-label:carouselBack" class="carousel-back" aria-label="Retrocedir" type="button">
                                     <svg class="icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                        <use href="img/sprite.svg#arrow-left"></use>
+                                        <use href="img/sprite.svg#arrow-left" xlink:href="img/sprite.svg#arrow-left"></use>
                                     </svg>
                                 </button>
                                 <button data-i18n-attr="aria-label:carouselAdvance" class="carousel-advance" aria-label="Avançar" type="button">
                                     <svg class="icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                        <use href="img/sprite.svg#arrow-right"></use>
+                                        <use href="img/sprite.svg#arrow-left" xlink:href="img/sprite.svg#arrow-right"></use>
                                     </svg>
                                 </button>
                             </aside>
@@ -441,7 +441,7 @@
                         <h4 data-i18n="otherData">Altres dades</h4>
                         <a data-i18n-attr="aria-label:downloadCV" class="other-links" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descarregar CV pdf">
                             <svg class="icons-color-2 icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#pdf"></use>
+                                <use href="img/sprite.svg#pdf" xlink:href="img/sprite.svg#pdf"></use>
                             </svg>
                         </a>
                     </div>
@@ -463,14 +463,14 @@
                                     <li>
                                         <a href="https://github.com/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Github">
                                             <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="28" height="28" preserveAspectRatio="xMinYMin meet">
-                                                <use href="img/sprite.svg#github"></use>
+                                                <use href="img/sprite.svg#github" xlink:href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Vercel">
                                             <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                                <use href="img/sprite.svg#vercel"></use>
+                                                <use href="img/sprite.svg#vercel" xlink:href="img/sprite.svg#vercel"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -491,14 +491,14 @@
                                 <li id="github-icon">
                                     <a href="https://github.com/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Github">
                                         <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                            <use href="img/sprite.svg#github"></use>
+                                            <use href="img/sprite.svg#github" xlink:href="img/sprite.svg#github"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li id="vercel-icon">
                                     <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Vercel">
                                         <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                            <use href="img/sprite.svg#vercel"></use>
+                                            <use href="img/sprite.svg#vercel" xlink:href="img/sprite.svg#vercel"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -541,7 +541,7 @@
             <div id="modal-img-wrapper"></div>
             <button data-i18n-attr="aria-label:modalClose" id="modal-close" class="icons-color-1" aria-label="Tancar" type="button">
                 <svg class="icons-scale" aria-hidden="true" width="50" height="50" preserveAspectRatio="xMinYMin meet">
-                    <use href="img/sprite.svg#close"></use>
+                    <use href="img/sprite.svg#close" xlink:href="img/sprite.svg#close"></use>
                 </svg>
             </button>
         </div>
