--- a/private/fallbacks/dark/index.es-ES.html
+++ b/private/fallbacks/dark/index.es-ES.html
@@ -292,7 +292,7 @@
                     <ol id="contact">
                         <li>
                             <address>
-                                <a data-i18n-attr="aria-label:mail" href="mailto:dev@sandokan.cat" aria-label="Enviar E-mail"><strong>dev@sandokan.cat</strong></a>
+                                <a id="mail" data-i18n-attr="aria-label:mail" href="mailto:dev@sandokan.cat" aria-label="Enviar E-mail"><strong>dev@sandokan.cat</strong></a>
                             </address>
                             <svg class="icons-color-1" aria-hidden="true" width="25" height="25" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#email" xlink:href="img/sprite.svg#email"></use>
