Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                         </p>
                         <!--//SIGNATURE END -->
                         <a href="https://sandokanCat.github.io/estopa/" target="_blank" data-status>
-                            <img data-i18n-attr="alt:estopa" src="public/estopa/img/logo_estopa.png" decoding="async" loading="lazy" alt="Estopa Fanpage, unfinished">
+                            <img data-i18n-attr="alt:estopa" src="https://sandokancat.github.io/estopa/img/logo_estopa.png" decoding="async" loading="lazy" alt="Estopa Fanpage, unfinished">
                         </a>
                     </div>
                 </section>
@@ -557,3 +557,4 @@
 </body>
 
 </html>
+
