--- a/private/fallbacks/light/index.es-ES.html
+++ b/private/fallbacks/light/index.es-ES.html
@@ -518,7 +518,7 @@
                         </p>
                         <!--//SIGNATURE END -->
                         <a href="https://sandokanCat.github.io/estopa/" target="_blank" data-status>
-                            <img data-i18n-attr="alt:estopa" src="public/estopa/img/logo_estopa.png" decoding="async" loading="lazy" alt="Página de fans de Estopa. Inacabado">
+                            <img data-i18n-attr="alt:estopa" src="https://sandokancat.github.io/estopa/img/logo_estopa.png" decoding="async" loading="lazy" alt="Página de fans de Estopa. Inacabado">
                         </a>
                     </div>
                 </section>
@@ -550,3 +550,4 @@
 </body>
 
 </html>
+
