add backend docs to sitemaps

--- a/sitemaps/sitemap.html
+++ b/sitemaps/sitemap.html
@@ -114,6 +114,7 @@
 		<nav>sandokan.cat HTML Site Map</nav>
 		<h3><span>Last updated: 2025, November 30<br />
             Total pages: 8</span>
+            <!-- MAIN -->
             <a href="https://sandokan.cat">sandokan.cat Homepage</a>
         </h3>
     </div>
@@ -123,11 +124,20 @@
             <li class="lpage last-page"><a href="https://sandokan.cat/" title="Fullstack Web Developer">sandokan.cat | Fullstack Web Developer</a></li>
             <li>
                 <ul class="level-1">
+                    <!-- CYBERSEC -->
                     <li class="lhead">doc/  <span class="lcount">7 pages</span></li>
                     <li class="lpage"><a href="https://sandokan.cat/doc/IFCT0023-CYBERSEC_gonzalo.pdf" title="IFCT0023 CYBERSEC course certificate">IFCT0023-CYBERSEC_gonzalo.pdf</a></li>
                     <li class="lpage"><a href="https://sandokan.cat/doc/IFCT0024-CYBERSEC-USERS_gonzalo.pdf" title="IFCT0024 CYBERSEC FOR USERS course certificate">IFCT0024-CYBERSEC-USERS_gonzalo.pdf</a></li>
+
+                    <!-- BACKEND -->
+                    <li class="lpage"><a href="https://sandokan.cat/doc/IFCD0210-BACKEND_gonzalo.pdf" title="IFCD0210 BACKEND course certificate">IFCD0210-BACKEND_gonzalo.pdf</a></li>
+                    <li class="lpage"><a href="https://sandokan.cat/doc/IFCD0210-FC_gonzalo.pdf" title="IFCD0210 ADDITIONAL TRAINING course certificate">IFCD0210-FC_gonzalo.pdf</a></li>
+
+                    <!-- FRONTEND -->
                     <li class="lpage"><a href="https://sandokan.cat/doc/IFCD0110-JSiPW_gonzalo.pdf" title="IFCD0110 JAVASCRIPT AND WEB PUBLICATION course certificate">IFCD0110-JSiPW_gonzalo.pdf</a></li>
                     <li class="lpage"><a href="https://sandokan.cat/doc/IFCD0110-FC_gonzalo.pdf" title="IFCD0110 ADDITIONAL TRAINING course certificate">IFCD0110-FC_gonzalo.pdf</a></li>
+
+                    <!-- OTHERS -->
                     <li class="lpage"><a href="https://sandokan.cat/doc/accesoUNED_gonzalo.pdf" title="ACCESS TO UNIVERSITY (UNED) course certificate">accesoUNED_gonzalo.pdf</a></li>
                     <li class="lpage"><a href="https://sandokan.cat/doc/certificatESO_gonzalo.pdf" title="COMPULSORY SECONDARY EDUCATION (ESO) course certificate">certificatESO_gonzalo.pdf</a></li>
                     <li class="lpage last-page"><a href="https://sandokan.cat/doc/CV_gonzalo.pdf" title="RESUME PDF">CV_gonzalo.pdf</a></li>
